--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "dayjs-plugin-strftime",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple Plugin for dayjs that adds strftime formatting",
-  "keywords": ["dayjs", "strftime", "plugin"],
+  "keywords": [
+    "dayjs",
+    "strftime",
+    "plugin"
+  ],
   "homepage": "https://github.com/thomas9911/dayjs-plugin-strftime",
   "main": "index.js",
   "type": "commonjs",
